# compiler_practice

./: .gitignore  CMakeLists.txt  README.md  main.c  test.txt
latest/: main.c  test.txt
latest/scripts/: CMakeLists.txt
latest/scripts/compiler/: compiler.c  cprocess.c
latest/scripts/helpers/: logger.c  logger.h
latest/scripts/lexer/: lex_helper.h  lex_identifier.c  lex_number.c  lex_operator.c  lex_process.c  lex_symbol.c  lexer.c
latest/scripts/token/: token.c
lesson-01-logger/: CMakeLists.txt  README.md  answer.md  main.c
lesson-01-logger/scripts/: CMakeLists.txt
lesson-01-logger/scripts/helpers/: CMakeLists.txt  logger.c
lesson-02-token/: README.md  answer.md  main.c
lesson-02-token/scripts/: CMakeLists.txt
lesson-02-token/scripts/token/: token.c
lesson-03-lexer-constructor/: README.md  answer.md  main.c
lesson-03-lexer-constructor/scripts/compiler/: compiler.c  cprocess.c
lesson-03-lexer-constructor/scripts/lexer/: lex_process.c  lexer.c
lesson-04-lexer-number/: README.md  answer.md
lesson-04-lexer-number/scripts/: lexer.h  token.h
lesson-05-lexer-string/scripts/: compiler.h
lesson-08-lexer-identifier/: CMakeLists.txt
scripts/: CMakeLists.txt  compiler.h  history.h  lexer.h  node.h  parser.h  pos.h  token.h
scripts/compiler/: compiler.c  cprocess.c
scripts/helpers/: logger.c  logger.h  vector.c
scripts/history/: history.c
scripts/lexer/: lex_comment.c  lex_for_string.c  lex_helper.h  lex_identifier.c  lex_keyword.c  lex_number.c  lex_operator.c  lex_process.c  lex_string.c  lex_symbol.c  lexer.c
scripts/node/: node.c
scripts/parser/: parse_helper.h  parser.c  parser_exp.c
scripts/token/: token.c
(+24 files in other folders)
